Add a new email job table and email service to schedule sending emails